--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,6 @@
 {
     "name": "bregananta/blocktrail",
     "description": "A Laravel package for the Blocktrail PHP sdk",
-    "require-dev": {
-        "phpunit/phpunit": "~5.7",
-        "orchestra/testbench": "~3.0"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -20,10 +16,25 @@
         "ext-curl": "*",
         "ext-bcmath": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~5.7",
+        "orchestra/testbench": "~3.0"
+    },
     "autoload": {
         "psr-4": {
             "Bregananta\\Blocktrail\\": "src/"
         }
 
+    },
+    "minimum-stability": "stable",
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Bregananta\\Blocktrail\\BlocktrailServiceProvider"
+            ],
+            "aliases": {
+                "Blockchain": "Bregananta\\Blocktrail\\BlocktrailFacade"
+            }
+        }
     }
 }
